--- a/hystrix-client/src/main/resources/application.yml
+++ b/hystrix-client/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: feign-client
+    name: hystrix-client
 server:
   port: 8085
 
@@ -11,4 +11,6 @@ eureka:
   instance:
     preferIpAddress: true
     instance-id: ${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}
-
+feign:
+  hystrix:
+    enabled: true
